Add SKU map option and adjust upload UI

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -22,6 +22,7 @@
                 <select name="source_0" required>
                   <option value="shopify">Shopify CSV</option>
                   <option value="qbo">QuickBooks Excel</option>
+                  <option value="sku_map">SKU Map File</option>
                 </select>
               </div>
             </div>
@@ -31,12 +32,6 @@
       <button id="addFileBtn" type="button" class="mdc-button mb-4">Add another file</button>
       <button type="submit" class="mdc-button mdc-button--raised">Upload</button>
     </form>
-    <div class="mt-4">
-      <form id="importSkuForm" method="post" enctype="multipart/form-data" action="{{ url_for('import_sku_map') }}">
-        <input id="skuFileInput" class="is-hidden" type="file" name="sku_file" accept=".csv,.xls,.xlsx" required hidden>
-        <button id="importSkuBtn" type="button" class="mdc-button mdc-button--raised">Import SKU map</button>
-      </form>
-    </div>
   </div>
 </div>
 <script>
@@ -62,14 +57,6 @@
       }
       fields.appendChild(clone);
       idx += 1;
-    });
-  }
-  const importBtn = document.getElementById('importSkuBtn');
-  const importInput = document.getElementById('skuFileInput');
-  if(importBtn && importInput){
-    importBtn.addEventListener('click', () => importInput.click());
-    importInput.addEventListener('change', () => {
-      if(importInput.files.length) document.getElementById('importSkuForm').submit();
     });
   }
 })();
