Show SKU in resolved duplicates

--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -237,8 +237,8 @@
           <td>{{ d.qbo_created_at|format_dt }}</td>
           <td>{{ d.action|capitalize }}</td>
           <td>{{ d.sku }}</td>
-          <td>{{ d.shopify_desc }}</td>
-          <td>{{ d.qbo_desc }}</td>
+          <td>{{ d.shopify_sku }}</td>
+          <td>{{ d.qbo_sku }}</td>
           <td>{{ d.quantity }}</td>
           <td>${{ "%.2f"|format(d.total) }}</td>
           <td>
