--- a/templates/upload.html
+++ b/templates/upload.html
@@ -29,8 +29,12 @@
           </div>
         </div>
       </div>
-      <button id="addFileBtn" type="button" class="mdc-button mb-4">Add another file</button>
-      <button type="submit" class="mdc-button mdc-button--raised">Upload</button>
+      <div class="field">
+        <button id="addFileBtn" type="button" class="mdc-button mb-4">Add another file</button>
+      </div>
+      <div class="field">
+        <button type="submit" class="mdc-button mdc-button--raised">Upload</button>
+      </div>
     </form>
   </div>
 </div>
