--- a/static/styles.css
+++ b/static/styles.css
@@ -589,3 +589,11 @@ input.switch:checked::before {
   background: none;
 }
 
+/* simple boolean icons */
+.bool-icon {
+  display: inline-block;
+  width: 1.25rem;
+  text-align: center;
+  font-weight: bold;
+}
+
